feat: used Selector and SelectionKey to multiplex the requests and handle each socket in a non-blocking manner